...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:baselineAligned="false"
                        android:weightSum="2">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutFirstName"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:errorIconDrawable="@null"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/firstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:hint="@string/reg_firstname_hint"
                                android:imeOptions="actionNext"
                                android:inputType="textPersonName|textCapWords"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutSurname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorIconDrawable="@null"
                        android:layout_marginTop="4dp">

                        <EditText
                            android:id="@+id/surname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:hint="@string/reg_surname_hint"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName|textCapWords"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reg_ques_gender"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gendererror"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/choose_option_error"
                        android:textSize="@dimen/text_sm"
                        android:layout_marginStart="4dp"
...
                    <RadioGroup
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:tag="M"/>

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:tag="F"/>

                        <RadioButton
                            android:id="@+id/nonBinary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/non_binary"
                            android:tag="N"/>

                    </RadioGroup>
...
                                android:focusable="true"
                                android:hint="@string/dob_hint"
                                android:imeOptions="flagNoExtractUi|actionNext"
                                android:inputType="datetime"
                                android:maxLength="10"
                                android:maxLines="1"
                                android:nextFocusDown="@+id/estimatedYear" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textInputLayoutDOB"
...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/country_of_birth_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/country_of_birth_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/emptyerror"
                        android:textColor="@color/red"
                        android:visibility="gone" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/guideline"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:id="@+id/country_of_birth"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:padding="17dp"
                                android:text="@string/country_of_birth_default"
                                app:drawableEndCompat="@drawable/black_arrow_down" />
...
                <LinearLayout
                    android:id="@+id/submitFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/submitButton"
                        style="@style/loginButtonStyle"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="14dp"
                        android:text="@string/action_submit" />
...
