<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/legal_consent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="20dp">

        <LinearLayout
            android:id="@+id/recordingInProgress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/recording_in_progress"
                android:src="@drawable/recording_in_progress"
                app:tint="@color/color_accent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recording_in_progress"
                android:textSize="@dimen/text_lg"
                android:textColor="@color/color_accent"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_wording"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/legal_consent_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_consent_intro"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/legal_consent_wording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_consent"
                    android:textColor="@color/black" />

                <RelativeLayout
                    android:id="@+id/bullet_point_1_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bullet_point_1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/circle" />

                    <TextView
                        android:id="@+id/bullet_point_1_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/first_bullet_point"
                        android:textColor="#000000"
                        android:layout_toEndOf="@id/bullet_point_1"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bullet_point_2_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bullet_point_2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/circle" />

                    <TextView
                        android:id="@+id/bullet_point_2_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/second_bullet_point"
                        android:textColor="#000000"
                        android:layout_toEndOf="@id/bullet_point_2"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bullet_point_3_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bullet_point_3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/circle" />

                    <TextView
                        android:id="@+id/bullet_point_3_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/third_bullet_point"
                        android:textColor="#000000"
                        android:layout_toEndOf="@id/bullet_point_3"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bullet_point_4_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/bullet_point_4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/circle" />

                    <TextView
                        android:id="@+id/bullet_point_4_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/fourth_bullet_point"
                        android:textColor="#000000"
                        android:layout_toEndOf="@id/bullet_point_4"/>
                </RelativeLayout>

                <TextView
                    android:id="@+id/legal_consent_wording_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_text"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/record"
                style="@style/loginButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:text="@string/record_legal_consent" />

            <TextView
                android:id="@+id/play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="17dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/pause"
                android:textAllCaps="true"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/text_lg"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/dark_grey_6x"
        android:focusable="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/stop_wording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/stop_save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_lg"
            android:textStyle="bold" />
    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
