...
    <string name="to_pause" tools:ignore="MissingTranslation">pause</string>
    <string name="legal_consent_intro_third" tools:ignore="MissingTranslation">and resume as many times as you want.</string>
    <string name="legal_consent_intro_fourth" tools:ignore="MissingTranslation">Once finished, press </string>
    <string name="stop_and_save" tools:ignore="MissingTranslation">Stop and send recording</string>
    <string name="legal_consent_intro_fifth" tools:ignore="MissingTranslation">to record the consent and be able to continue the patient registration process.</string>
    <string name="legal_consent">The main points of the information we have explained to you verbally and in a written format are:\n</string>
    <string name="record_again_legal_consent" tools:ignore="MissingTranslation"><u>Repeat recording</u></string>
    <string name="english" tools:ignore="MissingTranslation">English</string>
    <string name="catalan" tools:ignore="MissingTranslation">Catalan</string>
    <string name="spanish" tools:ignore="MissingTranslation">Spanish</string>
    <string name="german" tools:ignore="MissingTranslation">German</string>
    <string name="french" tools:ignore="MissingTranslation">French</string>
    <string name="italian" tools:ignore="MissingTranslation">Italian</string>
...
