...
            android:text="@string/language"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:background="@drawable/spinner_settings_page"
            app:layout_constraintTop_toTopOf="@id/language_header"
...
